# vigil

./: .env.example  .gitignore  README.md  demo.sh  pyproject.toml
cli/: package.json  vigil.js
eval/: __init__.py  benchmark.py  conditions.py  datasets.py  engine.py  phoenix_eval.py  plots.py  report.py  stats.py
eval/tests/: test_benchmark.py  test_phoenix_eval.py
